<resources>
    <string name="app_name">Vozarron</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="lista_entrenadores">ENTRENADORES</string>
    <string name="boton_lista_participantes">Lista de Participantes</string>
    <string name="boton_ir_votaciones">Votar en la Ronda</string>
    <string name="historial">Historial</string>
    <string name="ver_video">Ver Video</string>
    <string name="ronda_titulo">Ronda</string>
    <string name="video_titulo">Video</string>
    <string name="edad">Edad: </string>
    <string name="nombre_entrenador">Entrenador: </string>
    <string name="nombre_text">Nombre</string>
    <string name="agregar_participante">Agregar Participante</string>
    <string name="seleccionar_foto">SELECCIONAR FOTO</string>
    <string name="agregar">AGREGAR</string>
    <string name="votar">VOTAR</string>
    <string name="relleno">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum
    </string>
    <string name="mensaje_votar">Desea votar por este participante?</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="votacion_ok">Votacion realizada exitosamente.</string>
    <string name="agregar_exitoso">Participante agregado con éxito</string>
</resources>
