<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="android.electiva.uniquindio.edu.co.vozarron.fragments.VotarDialogFragment">


    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/mensaje_votar"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textSize="@dimen/texto_normal"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:weightSum="2"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/si"
            android:layout_weight="1"
            android:id="@+id/btn_votar_si"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            android:id="@+id/btn_votar_no"
            />



    </LinearLayout>

</LinearLayout>
